Added OAuth Single Sign On and Updated Homepage Documentation

--- a/SampleApps/Web/appsettings.json
+++ b/SampleApps/Web/appsettings.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "mp.ApiBaseUrl": "https://partner.ministryplatform.net/ministryplatformapi/",
   "mp.client": "readonly",
-  "mp.secret": "readonly"
+  "mp.secret": "readonly",
+  "mp.OAuthDiscoveryUrl": "https://partner.ministryplatform.net/ministryplatformapi/oauth/.well-known/openid-configuration"
 }
